# raytracing-weekend

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: camera.hpp  color.hpp  hittable.hpp  interval.hpp  main.cpp  material.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
